<resources>
    <string name="app_name">Tetris</string>
    <string name="tetris_game">TETRIS GAME</string>
    <string name="play_button">PLAY SOLO</string>
    <string name="settings_button">SETTINGS</string>
    <string name="play_versus">PLAY VERSUS</string>
    <string name="ranking">RANKING</string>
    <string name="exit">EXIT</string>
    <string name="hi">Hi %s</string>
    <string name="left_button">Left Button</string>
    <string name="down_button">Down Button</string>
    <string name="right_button">Right Button</string>
    <string name="roll_button">Roll Button</string>
    <string name="pause_button">Pause Button</string>
    <string name="resume_button">Resume Button</string>
    <string name="retry_txt">Retry</string>
    <string name="resume_txt">Resume</string>
    <string name="title">TETRIS GAME</string>
    <string name="game_over">GAME OVER</string>
    <string name="start">START</string>
    <string name="next_tetrimino">Next Tetrimino:</string>
    <string name="level">Level:</string>
    <string name="_0">0</string>
    <string name="high_score">High Score:</string>
    <string name="score">Score:</string>
    <string name="good_luck">GOOD LUCK!</string>
    <string name="square">Square</string>
    <string name="refresh">refresh</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="disconnect">Disconnect</string>

    <string name="enter_start_level_for_solo_game">Enter start level for solo game</string>
    <string name="your_nick">Your nick</string>
    <string name="enter_your_nick_below">Enter your nick below:</string>
    <string name="from_0_to_18">from 0 to 18</string>
    <string name="apply_changes">Apply Changes</string>
</resources>