<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TetrisGameActivity"
    android:background="@color/tetris_background_color">



    <GridView
        android:id="@+id/tetris_game_grid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"

        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/white"
        android:numColumns="10"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/left_button"
        app:layout_constraintEnd_toStartOf="@+id/right_panel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/right_panel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"

        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/left_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tetris_game_grid"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>


    <ImageButton
        android:id="@+id/left_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:contentDescription="@string/left_button"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/down_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tetris_game_grid"
        app:srcCompat="@drawable/ic_baseline_keyboard_arrow_left_24"
        tools:ignore="VectorDrawableCompat" />

    <ImageButton
        android:id="@+id/down_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:contentDescription="@string/down_button"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/right_button"
        app:layout_constraintStart_toEndOf="@+id/left_button"
        app:layout_constraintTop_toBottomOf="@+id/tetris_game_grid"
        app:srcCompat="@drawable/ic_baseline_arrow_downward_24"
        tools:ignore="VectorDrawableCompat" />

    <ImageButton
        android:id="@+id/right_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:contentDescription="@string/right_button"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/roll_button"
        app:layout_constraintStart_toEndOf="@+id/down_button"
        app:layout_constraintTop_toBottomOf="@+id/tetris_game_grid"
        app:srcCompat="@drawable/ic_baseline_keyboard_arrow_right_24"
        tools:ignore="VectorDrawableCompat" />

    <ImageButton
        android:id="@+id/roll_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:contentDescription="@string/roll_button"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/right_button"
        app:layout_constraintTop_toBottomOf="@+id/tetris_game_grid"
        app:srcCompat="@drawable/ic_baseline_refresh_24"
        tools:ignore="VectorDrawableCompat" />
</androidx.constraintlayout.widget.ConstraintLayout>