<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Kontener na całe menu gry-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/menu_background_color"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="-49dp">
        <!-- Kontener tytuł gry-->
        <RelativeLayout
            android:id="@+id/topContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <!-- Tło tytułu gry /-->
            <!-- Tytuł gry  /-->
            <LinearLayout
                android:id="@+id/topBackground"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/top_background"
                android:orientation="horizontal">

            </LinearLayout>

            <TextView
                android:id="@+id/topText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/topBackground"
                android:layout_alignTop="@id/topBackground"
                android:layout_alignEnd="@id/topBackground"
                android:layout_alignBottom="@id/topBackground"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/tetris_game"
                android:textColor="@color/white"
                android:textSize="65sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/play_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:text="@string/play_button"
            app:backgroundTint="@color/menu_buttons_color"/>

        <Button
            android:id="@+id/settings_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:text="@string/settings_button"
            app:backgroundTint="@color/menu_buttons_color"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>